# AP4Fed

./: .$flschema.drawio.bkp  .$slschema.drawio.bkp  .gitignore  ICSA26.pptx  NYUv2-Preprocessing.ipynb  README.md  build_paper_experiments.py  build_paper_experiments_500clients_k5.py  download_commands.txt  exp1.sh  flschema.drawio  home.py  presimulation.py  recap_simulation.py  requirements-experiments.txt  requirements.txt  run_batch.py  run_exp1.sh  run_exp2.sh  run_local_baselines.py  run_local_experiments.py  run_my_experiments.sh  runall.py  simulation.py  simulation_results.py  slschema.drawio  strategy_smoke_results.json  strategy_smoke_results_2clients.json  test_leonardo.sh
Local/: .cpu_pool_state.json  adaptation.py  adaptation_metrics.py  adaptation_settings.py  agent_prompting.py  client.py  compute_models_ssim.py  model_local.h5  ollama_client.py  pyproject.toml  server.py  taskA.py  taskImageNet.py  temp_model.onnx
Local/configuration/: config.json
Local/model_weights/: test.ipynb
Local/performance/: FLwithAP_performance_metrics.csv  FLwithAP_performance_metrics_round1.csv  FLwithAP_performance_metrics_round10.csv  FLwithAP_performance_metrics_round2.csv  FLwithAP_performance_metrics_round3.csv  FLwithAP_performance_metrics_round4.csv  FLwithAP_performance_metrics_round5.csv  FLwithAP_performance_metrics_round6.csv  FLwithAP_performance_metrics_round7.csv  FLwithAP_performance_metrics_round8.csv  FLwithAP_performance_metrics_round9.csv
Local/performance_MLdata/: FLwithAP_MLdata.csv
Local/pre-builded-models/: taskA-ImageNet100.py  taskA-n.py  (+1 more)
(+2283 files in other folders)
