[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ap4fed-local"
version = "1.0.0"
description = "AP4FED Local Simulation"
dependencies = [
    "flwr[simulation]>=1.11.0",
]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.app.config]
num-supernodes = 2
